...
    "%age" : MessageLookupByLibrary.simpleMessage("%age"),
    "ASST" : MessageLookupByLibrary.simpleMessage("ASST"),
    "About" : MessageLookupByLibrary.simpleMessage("About"),
    "Add Game" : MessageLookupByLibrary.simpleMessage("Add Game"),
    "Add Player" : MessageLookupByLibrary.simpleMessage("Add Player"),
    "Add Season" : MessageLookupByLibrary.simpleMessage("Add Season"),
    "Add Team" : MessageLookupByLibrary.simpleMessage("Add Team"),
    "Add User" : MessageLookupByLibrary.simpleMessage("Add User"),
    "All Events" : MessageLookupByLibrary.simpleMessage("All Events"),
    "All Periods" : MessageLookupByLibrary.simpleMessage("All Periods"),
    "All Players" : MessageLookupByLibrary.simpleMessage("All Players"),
    "All Seasons" : MessageLookupByLibrary.simpleMessage("All Seasons"),
    "Assist" : MessageLookupByLibrary.simpleMessage("Assist"),
...
    "Name is required." : MessageLookupByLibrary.simpleMessage("Name is required."),
    "No Games" : MessageLookupByLibrary.simpleMessage("No Games"),
    "No Media" : MessageLookupByLibrary.simpleMessage("No Media"),
    "No Players" : MessageLookupByLibrary.simpleMessage("No Players"),
    "No Players with state" : MessageLookupByLibrary.simpleMessage("No Players with state"),
    "No Seasons" : MessageLookupByLibrary.simpleMessage("No Seasons"),
    "No Teams" : MessageLookupByLibrary.simpleMessage("No Teams"),
    "No account found for email or internal error occured" : MessageLookupByLibrary.simpleMessage("No account found for email or internal error occured"),
    "No guest players" : MessageLookupByLibrary.simpleMessage("No guest players"),
    "No invites" : MessageLookupByLibrary.simpleMessage("No invites"),
    "Not started" : MessageLookupByLibrary.simpleMessage("Not started"),
    "O/RB" : MessageLookupByLibrary.simpleMessage("O/RB"),
    "OFF RB" : MessageLookupByLibrary.simpleMessage("OFF RB"),
...
