...
                        onPressed: () => BlocProvider.of<LoginBloc>(context)
                            .add(LoginEventLogout()))
                  ],
                );
              } else {
                return BlocBuilder(
                  key: Key('teamsContent'),
                  cubit: BlocProvider.of<TeamsBloc>(context),
                  builder: (BuildContext context, TeamsBlocState state) {
                    if (state is TeamsBlocUninitialized) {
                      return Text(Messages.of(context).loadingText);
                    }
                    if (state is TeamsBlocLoaded) {
...
